<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.MainActivity">


    <Button
        android:id="@+id/btnBusqueda"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/txt_buscar"
        app:layout_constraintEnd_toStartOf="@+id/btnReset"
        app:layout_constraintStart_toEndOf="@+id/search_bar"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/refresh_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ListView
        android:id="@+id/lvRegistro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNuevoRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:listitem="@layout/item_data">

    </ListView>

    <Button
        android:id="@+id/btnNuevoRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/nuevo_registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/btnBusqueda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_registro"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBusqueda" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rBtnZone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_zona"
            android:layout_marginEnd="10dp"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rBtnCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_codigocliente"
            android:layout_marginEnd="10dp"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rBtnSerial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_numero_serial"
            android:textSize="12sp" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>